--- a/all.yml
+++ b/all.yml
@@ -2,70 +2,28 @@
 - hosts: all
   roles:
 
-  # osx config
+  - role: cask_package
+    packages:
+    - asepsis
+    - google-chrome
+    - firefox
+    - caffeine
+    - iterm2
+    - sublime-text
   - role: dock
     apps:
+    - /Applications/Sublime\ Text\ 2.app
     - /Applications/Firefox.app
-    - /Applications/Airmail.app
-    - /Applications/Dashlane.app
-    - /Applications/Spotify.app
-    - /Applications/Airmail.app
-    - "/Applications/Adobe Photoshop CC/Adobe Photoshop CC.app"
-    - "/Applications/Adobe Illustrator CC/Adobe Illustrator.app"
-    - /Applications/Atom.app
+    - /Applications/Google\ Chrome.app
     - /Applications/iTerm.app
-    - /Applications/Dash.app
     folders:
     - path: ~/
     - path: ~/Documents
     - path: ~/Downloads
       sort: datemodified
-  - role: cask_package
-    package_name: asepsis
   - role: dashboard
     disabled: YES
 
-  # fonts
-  - role: cask_package
-    tap: caskroom/fonts
-    package_name: font-source-code-pro
-  - role: cask_package
-    tap: caskroom/fonts
-    package_name: font-sauce-code-powerline
-
-  # cli
-  # shell tooling
-  - role: git
-    git_user_name: Bob Bob
-    git_user_email: bob.bob@example.com
-  - role: legit
   - role: hub
   - role: brew_package
     package_name: vim
-  ## languages
-  - role: brew_package
-    package_name: node
-  - role: rbenv
-  - role: npm_package
-    package_name: grunt
-  - role: npm_package
-    package_name: bower
-  - role: cask_package
-    package_name: java
-  - role: brew_package
-    package_name: android-sdk
-  ## databases
-  - role: brew_package
-    package_name: postgres
-  - role: brew_package
-    package_name: mongodb
-  ## deployment
-  - role: brew_package
-    package_name: heroku-toolbelt
-  # - role: brew_package
-  #   package_name: ansible # Hey ! Already there !
-
-  # gui
-  ## text editors
-  - role: cask_package
-    package_name: atom
